[package]
name = "proof_of-learn"
version = "0.1.0"
authors = ["jaesonbooker"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"
crypto-hash = "0.3.3"
chrono = "0.4"
